hetzner/k8s/ed_hotas/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ed-hotas
  namespace: apps-ed-hotas
  labels:
    app.kubernetes.io/name: ed-hotas
    app.kubernetes.io/component: webserver
    app.kubernetes.io/managed-by: argocd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ed-hotas
    app.kubernetes.io/component: webserver
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
