hetzner/k8s/ed_hotas/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ed-hotas
  namespace: apps-ed-hotas
  labels:
    app.kubernetes.io/name: ed-hotas
    app.kubernetes.io/component: webserver
    app.kubernetes.io/managed-by: argocd
  annotations:
    tailscale.com/tags: "tag:k8s,tag:server-apps"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Elite Controls"
    gethomepage.dev/description: "Boopidoo HOTAS bindings cheat sheet"
    gethomepage.dev/group: "Games"
    gethomepage.dev/icon: "si-elitedangerous"
    gethomepage.dev/href: "https://elite-controls.rohu-shark.ts.net"
    gethomepage.dev/siteMonitor: "http://ed-hotas.apps-ed-hotas.svc.cluster.local:80"
spec:
  ingressClassName: tailscale
  rules:
    - host: elite-controls.rohu-shark.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ed-hotas
                port:
                  number: 80
  tls:
    - hosts:
        - elite-controls.rohu-shark.ts.net
